--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
